# RideSync

./: .env  CMakeLists.txt  DestinationManager.cpp  LICENSE  README.md  RoutePlanner.cpp  SpeedAdvisor.h  TrafficLight.h  TrafficLightFetcher.cpp  data_exploration.ipynb  lsaknoten_20241031.csv  main.cpp  requirements.txt  requirements_pi.txt
include/: DestinationManager.h  PositionTracker.h  RoutePlanner.h  TrafficLightFetcher.h  UpdateLoopController.h
phase_measurements/: Aachener_750549269.csv  Hollar_8546960460.csv  Venloer_4279001084.csv  Vogelsanger_2107720091.csv  Weinsbergstr_2603639844.csv  phase_measurements_processing.ipynb
src/: Cyclist.py  DestinationManager.py  MockedCyclist.py  PositionTracker.cpp  PositionTracker.py  RoutePlanner.py  RoutePlannerALT.py  SpeedAdvisor.cpp  SpeedAdvisor.py  SpeedTracker.py  Speedometer.py  TrafficLight.cpp  TrafficLight.py  TrafficLightALT.py  TrafficLightFetcher.cpp  TrafficLightFetcher.py  TrafficLightSelector.py  UpdateLoopController.cpp  UpdateLoopController.py  UpdateLoopControllerALT.py  UpdateLoopControllerV2.py  main.py  route_visualizer.py  traffic_light.json  traffic_lights_venloer_bis_aachener.json  utils.py
